# Ai-master-pro

./: GITHUB_BUILD_GUIDE.md  PRIVACY_POLICY_DEPLOY.md  README.md  UPLOAD_WITH_GITHUB_DESKTOP.md  build_android.ps1  build_android_apk.bat  build_play_store_aab.bat  config.py  delete_account.html  main.py  privacy_policy.html  pyproject.toml  release_check.py  requirements.txt  run_app.bat  setup_windows.bat  setup_windows.ps1  test_project.bat
.github/workflows/: build (2).yml  build.yml
extensions/flet_admob_pro/: pyproject.toml
extensions/flet_admob_pro/src/flet_admob_pro/: __init__.py  base_ad.py  native_ad.py  rewarded_ad.py  types.py
extensions/flet_admob_pro/src/flet_admob_pro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
extensions/flet_admob_pro/src/flutter/flet_admob_pro/: pubspec.yaml
extensions/flet_admob_pro/src/flutter/flet_admob_pro/lib/: flet_admob_pro.dart
extensions/flet_admob_pro/src/flutter/flet_admob_pro/lib/src/: extension.dart  native.dart  rewarded.dart
extensions/flet_admob_pro/src/flutter/flet_admob_pro/lib/utils/: ads.dart
services/: __init__.py  ad_service.py  crash_service.py  database_service.py  error_service.py  firebase_auth_service.py  gemini_service.py  groq_service.py  image_queue_service.py  image_service.py  safety_service.py  session_service.py  usage_service.py  video_service.py  voice_service.py
tests/: test_core_services.py  test_crash_protection.py  test_extended_services.py  test_flet_smoke.py
