[project]
name = "ai_master_pro"
version = "0.9.7"
description = "All-in-one AI studio for creators"
requires-python = ">=3.11"
dependencies = [
    "flet==0.85.3",
    "flet-audio==0.85.3",
    "flet-audio-recorder==0.85.3",
    "flet-secure-storage==0.85.3",
    "flet-admob-pro",
    "groq==1.5.0",
    "python-dotenv==1.2.1",
    "edge-tts==7.2.8",
]

[tool.flet]
product = "AI Master Pro"
org = "com.aimasterpro"
bundle_id = "com.aimasterpro.app"
build_number = 18

[tool.flet.dev_packages]
flet-admob-pro = "extensions/flet_admob_pro"

[tool.flet.app]
path = "."
module = "main.py"

[tool.flet.app.boot_screen]
show = true
message = "Preparing AI Master Pro..."

[tool.flet.app.startup_screen]
show = true
message = "Starting AI Master Pro..."

[tool.flet.android]
min_sdk_version = 24
target_sdk_version = 35
adaptive_icon_background = "#EEF4FF"

[tool.flet.android.manifest_application]
usesCleartextTraffic = "false"
allowBackup = "false"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3725379940334991~3875540091"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.RECORD_AUDIO" = true
"android.permission.CAMERA" = false
"android.permission.ACCESS_FINE_LOCATION" = false
"android.permission.ACCESS_COARSE_LOCATION" = false
"android.permission.READ_EXTERNAL_STORAGE" = false
"android.permission.WRITE_EXTERNAL_STORAGE" = false

[tool.flet.android.feature]
"android.hardware.microphone" = false
"android.hardware.camera" = false
"android.hardware.location.gps" = false

[tool.flet.splash]
color = "#F7FAFF"
dark_color = "#F7FAFF"
icon_bgcolor = "#F7FAFF"
icon_dark_bgcolor = "#F7FAFF"
